# SFA3D

./: .gitignore  .gitmodules  README.md  Technical_details.md  requirements.txt  setup.py
SFA_3d_object_detection/: demo_2_sides.py  demo_front.py  test.py  train.py
SFA_3d_object_detection/data_process/: demo_dataset.py  kitti_bev_utils.py  kitti_data_utils.py  kitti_dataloader.py  kitti_dataset.py  transformation.py
SFA_3d_object_detection/losses/: losses.py
SFA_3d_object_detection/models/: model_utils.py
SFA_3d_object_detection/utils/: demo_utils.py  evaluation_utils.py  train_utils.py  visualization_utils.py
ros/detected_objects_visualizer/: CMakeLists.txt  package.xml
ros/src/detected_objects_visualizer/: CMakeLists.txt  package.xml
ros/src/detected_objects_visualizer/include/: visualize_detected_objects.h
ros/src/detected_objects_visualizer/launch/: detected_objects_vis.launch
ros/src/detected_objects_visualizer/src/: visualize_rects.cpp
ros/super_fast_object_detection/: CMakeLists.txt  README.md  package.xml
sfa/: demo_2_sides.py  demo_front.py  export.py  infer_onnx.py  infer_tensorrt.py  test.py  train.py
sfa/config/: kitti_config.py  train_config.py
sfa/data_process/: demo_dataset.py  kitti_bev_utils.py  kitti_data_utils.py  kitti_dataloader.py  kitti_dataset.py  transformation.py
sfa/losses/: losses.py
sfa/models/: model_utils.py
sfa/utils/: box_np_ops.py  demo_utils.py  eval.py  evaluation_utils.py  kitti_common.py  misc.py  nms_gpu.py  rotate_iou.py  torch_utils.py  (+2 more)
src/: demo_2_sides.py  demo_front.py  test.py  train.py
(+22 files in other folders)
