<?xml version="1.0"?>
<package format="2">
  <name>detected_objects_visualizer</name>
  <version>1.12.0</version>
  <description>Visualization package for DetectedObjectArray</description>
  <maintainer email="abrahammonrroy@yahoo.com">amc</maintainer>
  <license>Apache</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
</package>
